styles/index.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: 'Raleway', sans-serif;
  background-color: hsl(33, 94%, 87%);
  color: black;
  overflow-x: hidden;
}

.header {
  position: fixed;
  top: 15px;
  left: 0;
  right: 0;
  display: flex;
  color: white;
  justify-content: space-between;
  align-items: center;
  background-color: #333;
  z-index: 1000;
  height: 100px;
  padding: 20px;
  white-space: nowrap;
  overflow: hidden;
  
}

.brand-name {
  font-family: 'Poppins', sans-serif;
  font-weight: 600;
  font-size: 2.2rem;
  flex-shrink: 1;
}

.info-links {
  display: flex;
  gap: 24px;
  align-items: center;
  flex-shrink: 1;
}

.info-links a {
  color: white;
  text-decoration: none;
  font-weight: 500;
}
.info-links .nav-link{
  white-space: nowrap;
  flex-shrink: 1;

}

.info-links a.active,
.info-links a:hover {
  font-weight: 600;
  border-bottom: 2px solid white;
}
  
#main-footer {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  height: 80px;
  background-color: #3f1c1c;
  color: white;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 40px;
  z-index: 999;
}


body::after {
  content: "";
  display: block;
  height: 80px; 
}


.footer-links {
  display: flex;
  gap: 20px;
}

.footer-links a {
  color: white;
  text-decoration: none;
  font-size: 1rem;
}


@media (max-width: 768px) {
  .main-body {
    grid-template-columns: 1fr;
    text-align: center;
  }
}

@media (max-width : 600px){
  .brand-name{
    font-size: 1.2rem;
  }
  .info-links .nav-link{
    font-size: 0.8rem;
    gap: 0.5rem;
  }

  .info-links{
    gap: 0.5rem;
    margin-left: 8px;
  }
  .header{
    height: 50px;
  }
}

